RESOLVED FIXED122032
ASSERT(!m_hasBadParent) in InlineBox::parent() should be ASSERT_WITH_SECURITY_IMPLICATION
https://bugs.webkit.org/show_bug.cgi?id=122032
Summary ASSERT(!m_hasBadParent) in InlineBox::parent() should be ASSERT_WITH_SECURITY...
Drew Yao
Reported 2013-09-27 14:26:02 PDT
Source/WebCore/rendering/InlineBox.h: InlineFlowBox* parent() const { ASSERT(!m_hasBadParent); return m_parent; } ASSERT(!m_hasBadParent) in InlineBox::parent() should be ASSERT_WITH_SECURITY_IMPLICATION. Its sole purpose is to catch use after free bugs.
Attachments
Patch (1.24 KB, patch)
2013-09-27 14:39 PDT, Drew Yao
no flags
Drew Yao
Comment 1 2013-09-27 14:39:19 PDT
WebKit Commit Bot
Comment 2 2013-09-30 14:54:46 PDT
Comment on attachment 212841 [details] Patch Clearing flags on attachment: 212841 Committed r156682: <http://trac.webkit.org/changeset/156682>
WebKit Commit Bot
Comment 3 2013-09-30 14:54:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.