ASSERT(!m_hasBadParent) in InlineBox::parent() should be ASSERT_WITH_SECURITY_IMPLICATION https://bugs.webkit.org/show_bug.cgi?id=122032

Patch by Drew Yao <ayao@apple.com> on 2013-09-30
Reviewed by Andreas Kling.

Convert assertion to ASSERT_WITH_SECURITY_IMPLICATION to help catch use after free bugs.

No new tests needed.

* rendering/InlineBox.h:
(WebCore::InlineBox::parent):

Canonical link: https://commits.webkit.org/140179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156682 268f45cc-cd09-0410-ab3c-d52691b4dbfc